# evo-pro

./: .env.example  .eslintrc.cjs  README.md  package.json  playwright.accessibility.config.ts  playwright.config.ts  playwright.visual.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  typedoc.json  vite.config.ts  vitest.config.ts  vitest.integration.config.ts  vitest.performance.config.ts
relay_server/: Cargo.toml
relay_server/src/: main.rs
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns  macOS-schema.json
src-tauri/macros/src/: lib.rs
src-tauri/migrations/: 0001_init_db.sql  0002_add_updated_at_triggers.sql
src-tauri/seeding/: 0001_init_db.sql  0002_add_updated_at_triggers.sql  10000_seed.sql
src-tauri/src/: commands.rs  error.rs  keys.rs  lib.rs  logging.rs  main.rs  state.rs  swarms.rs  utils.rs
src-tauri/src/actors/: agents.rs  conversation.rs  database.rs  fault_detection.rs  gateway.rs  ipc.rs  lifecycle.rs  lifecycle_utils.rs  metrics.rs  mod.rs  supervision.rs  supervision_tree.rs  swarm.rs  tools.rs  ui_notifier.rs  websocket.rs
src-tauri/src/api/: types.rs
src-tauri/src/commands-old/: api.rs
src-tauri/src/dev_tools/: adaptive_profiling.rs  mod.rs  performance_monitoring.rs
src-tauri/src/entities/: accounts.rs  addresses.rs  agents.rs  api_keys.rs  attachments.rs  contacts.rs  conversation_participants.rs  conversations.rs  document_chunks.rs  documents.rs  event_participants.rs  events.rs  files.rs  group_members.rs  groups.rs  mcp_servers.rs  mcp_tools.rs  memories.rs  messages.rs  mod.rs  models.rs  notifications.rs  p2p_message_queue.rs  p2p_nodes.rs  participants.rs  peer_id.rs  plans.rs  registry.rs  task_assignees.rs  tasks.rs  tools.rs  users.rs  workspaces.rs
src-tauri/src/entities-new/: accounts.rs  addresses.rs  agent_chain_executions.rs  agent_tools.rs  agents.rs  api_keys.rs  attachments.rs  contacts.rs  conversation_participants.rs  conversations.rs  document_chunks.rs  documents.rs  mcp_servers.rs  memory_items.rs  memory_vectors.rs  messages.rs  mod.rs  model_registry.rs  p2p_messages.rs  participants.rs  prompts.rs  tools.rs
src-tauri/src/error/: enrichment.rs  reporter.rs  taxonomy.rs
src-tauri/src/integration/: auth.rs  interfaces.rs  mod.rs  monitoring.rs  rate_limiting.rs  tests.rs
src-tauri/src/logging/: correlation.rs  mod.rs
src-tauri/src/plugins/: capabilities.rs  interfaces.rs  loader.rs  manager.rs  marketplace.rs  mod.rs  registry.rs  security.rs  versioning.rs
src-tauri/src/privacy/: anonymization.rs  mod.rs  policy.rs
src-tauri/src/repositories/: base.rs  cache.rs  cache_consistency.rs  cache_metrics.rs  cache_warming.rs  factory.rs  mod.rs  query_builder.rs  task_repository.rs  validation.rs
src-tauri/src/resources/: adaptation.rs  detection.rs  enhancement.rs  fallback.rs  mod.rs  tests.rs
src-tauri/src/security/: mod.rs  secure_defaults.rs  threat_modeling.rs
src-tauri/src/services/: agent.rs  composition.rs  consent_management.rs  conversation.rs  core.rs  data_deletion_verification.rs  data_export.rs  data_minimization.rs  data_retention.rs  data_usage_reporting.rs  events.rs  logging.rs  (+11 more)
(+278 files in other folders)
