[package]
name = "relay_server"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
libp2p = { version = "0.55", features = ["dns", "dcutr", "identify", "macros", "noise", "ping", "quic", "relay", "rendezvous", "tcp", "tokio", "yamux"] }
tracing = "0.1.41"
tokio = { version = "1.40.0", features = ["macros", "process"] }
tracing-subscriber = "0.3.19"
