[package]
name = "evo-pro"
version = "0.1.0"
description = "Evo Pro agent orchestration and AI development tool"
authors = ["you"]
edition = "2024"
default-run = "evo-pro"

[features]
default = []
dev = []

[[bin]]
name = "evo-pro"
path = "src/main.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "evo_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

[build-dependencies]
tauri-build = { version = "2", features = [] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "macros", "sqlite", "uuid", "chrono"] }
tokio = { version = "1.40.0", features = ["macros", "process"] }
color-eyre =  "0.6"
dotenvy = "0.15"
url = "2.5"

[dependencies]
async-openai = { version = "0.29.0", default-features = false, features = ["byot", "native-tls"] }
async-trait = "0.1.88"
color-eyre = "0.6.5"
dirs = "6.0.0"
dotenvy = "0.15.7"
futures-util = "0.3.31"
kameo = { version = "0.17.2", features = ["remote"] }
kameo_actors = "0.2.0"
libp2p = { version = "0.55", features = ["dns", "dcutr", "identify", "macros", "noise", "ping", "quic", "relay", "rendezvous", "tcp", "tokio", "yamux"] }
reqwest = "0.12.21"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
sqlx = { version = "0.8.6", features = ["sqlite", "macros", "runtime-tokio", "uuid", "chrono"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2.2.1", features = ["sqlite"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v4"] }
hnsw_rs = "0.3.2"
chrono = { version = "0.4", features = ["serde"] }
rig-core = "0.13.0"
rig-qdrant = "0.1.14"
rig-bedrock = "0.2.0"
rig-sqlite = "0.1.11"
boilermates = { git = "https://github.com/Cyanistic/boilermates.git" }
serde_with = "3.14.0"
macros = { path = "./macros" }
url = "2.5"
sync_wrapper = "1.0.2"
specta = { version = "=2.0.0-rc.22", features = ["derive", "serde", "uuid"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive"] }
sysinfo = "0.30.7"
